Adding vim bundles

--- a/README
+++ b/README
@@ -10,6 +10,7 @@ Installation:
 
 Create symlinks:
 
+	ln -s ~/dotfiles/vim ~/.vim
 	ln -s ~/dotfiles/vim/vimrc ~/.vimrc
 	ln -s ~/dotfiles/vim/gvimrc ~/.gvimrc
 
